[gd_scene load_steps=13 format=2]

[ext_resource path="res://input/Input.gd" type="Script" id=1]
[ext_resource path="res://fonts/plex_mono_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=4]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://GameInfo.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.286275, 0.286275, 0.286275, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 4 )

[node name="RoomManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="TrainingRoom" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 10.0
margin_top = -751.0
margin_right = 274.0
margin_bottom = -551.0
room_name = "a small room"
room_description = "a dimly lit room filled with training dummies, rations and manuals. Seems like a perfect place for training."

[node name="BedRoom" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 8.0
margin_top = -529.0
margin_right = 272.0
margin_bottom = -329.0
room_name = "a small bed room"
room_description = "a small futon bed and you find neatly kept in a box a key."

[node name="GateRoom" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 326.0
margin_top = -527.0
margin_right = 690.0
margin_bottom = -327.0
room_name = "entrance to training room"
room_description = "a large field covered with woods"

[node name="Woods" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 427.0
margin_top = -739.0
margin_right = 691.0
margin_bottom = -539.0
room_name = "woods"
room_description = "a seemingly endless abundance of trees that one can get lost in for a while."

[node name="Mountains" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 426.0
margin_top = -315.0
margin_right = 690.0
margin_bottom = -115.0
room_name = "mountains"
room_description = "a tall mountainscape with nothing in sight."

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="GameInfo" parent="Background/MarginContainer/Rows" instance=ExtResource( 8 )]

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 500.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_right = 984.0
margin_bottom = 60.0

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_top = 11.0
margin_right = 51.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_left = 55.0
margin_right = 984.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
max_length = 48
script = ExtResource( 1 )

[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
